# Generated by Django 6.0.7 on 2026-08-11 07:45

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Batiment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=100, unique=True)),
                ('description', models.TextField(blank=True)),
            ],
        ),
        migrations.CreateModel(
            name='Equipement',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=100, unique=True)),
                ('type', models.CharField(choices=[('ORDINATEUR', 'Ordinateur')], max_length=20)),
                ('numero_inventaire', models.CharField(max_length=100, unique=True)),
                ('adresse_ip', models.GenericIPAddressField(blank=True, null=True)),
                ('adresse_mac', models.CharField(blank=True, max_length=17)),
                ('actif', models.BooleanField(default=True)),
            ],
        ),
        migrations.CreateModel(
            name='Etage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero', models.IntegerField()),
                ('nom', models.CharField(blank=True, max_length=100)),
                ('batiment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='etages', to='inventaire.batiment')),
            ],
        ),
        migrations.CreateModel(
            name='Plan',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('image', models.ImageField(upload_to='plans/')),
                ('largeur', models.PositiveBigIntegerField(blank=True, null=True)),
                ('hauteur', models.PositiveBigIntegerField(blank=True, null=True)),
                ('etage', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='plan', to='inventaire.etage')),
            ],
        ),
        migrations.CreateModel(
            name='Position',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('x', models.FloatField()),
                ('y', models.FloatField()),
                ('equipement', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='position', to='inventaire.equipement')),
                ('plan', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='positions', to='inventaire.plan')),
            ],
        ),
        migrations.CreateModel(
            name='Salle',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=100)),
                ('description', models.TextField(blank=True)),
                ('etage', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='salles', to='inventaire.etage')),
            ],
        ),
        migrations.AddField(
            model_name='equipement',
            name='salle',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='equipements', to='inventaire.salle'),
        ),
    ]
